k8s/namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: chat-app
  labels:
    name: chat-app
